# wealth-tracker

./: .gitignore  Cargo.toml
src/: app.rs  error.rs  lib.rs  main.rs
src/backend/: message.rs  mod.rs
src/model/: mod.rs  stock.rs
src/view/: bitcoin_view.rs  mod.rs  setting_view.rs  stock_setting.rs  stocks.rs
