[package]
name = "wealth-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.14"
eframe = { version = "0.30.0", features = ["__screenshot", "persistence"] }
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
egui_plot = "0.30.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tracing-subscriber = "0.3.19"
